...
  const renderHeader = useCallback(
    ({ options }: { options: { title?: string } }) => (
      <Appbar.Header elevated={false}>
        <Appbar.Content title={options.title ?? ""} />
        <Appbar.Action
          icon="cog-outline"
          testID="appbar-settings-button"
          onPress={() => rootNavigation.navigate("Settings")}
        />
      </Appbar.Header>
    ),
    [rootNavigation],
  );
...
