...
          />
          <List.Item
            title={t("settings.calendarSection")}
            left={renderCalendarIcon}
            right={renderChevron}
            onPress={() => navigation.navigate("SettingsCalendar")}
            testID="settings-calendar-item"
          />
          <List.Item
            title={t("settings.widget")}
            left={renderWidgetIcon}
            right={renderChevron}
            onPress={() => navigation.navigate("SettingsWidget")}
...
